[tool.poetry]
name = "ton-node-control"
version = "0.1.0"
description = ""
authors = ["Alexander Walther <asushofman@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.3"
toml = "0.10.2"
pytest = "7.1.3"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
