[tool.poetry]
authors = ["Alexander Walther <asushofman@gmail.com>"]
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: User Interfaces',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Networking',
    'Topic :: System :: Networking :: Monitoring',
    'Topic :: Utilities',
]
description = ""
documentation = ""
homepage = "https://github.com/Walther-s-Engineering/ton-node-control"
keywords = ["The Open Network", "TON", "blockhain", "tools"]
license = "Apache-2.0"
name = "ton-node-control"
packages = [
    { include = "ton_node_control"},
]
readme = "README.md"
repository = "https://github.com/Walther-s-Engineering/ton-node-control.git"
version = "0.0.1.1"

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.3"
toml = "0.10.2"
pytest = "7.2.0"
PyYAML = "6.0"
mypy = "0.982"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools>=65.3.0"]
